# DRC

./: Cargo.toml  README.md  Todo.md  demo.rs  idea.md
.github/workflows/: ci.yml
drc-rust/: Cargo.toml
drc-rust/drc-cli/: Cargo.toml
drc-rust/drc-cli/src/: main.rs
drc-rust/drc-control/: Cargo.toml
drc-rust/drc-control/src/: lib.rs
drc-rust/drc-core/: Cargo.toml
drc-rust/drc-core/src/: enhanced.rs  lib.rs  lifecycle.rs  traits.rs  types.rs
drc-rust/drc-governance/: Cargo.toml
drc-rust/drc-governance/src/: audit.rs  classification.rs  compliance.rs  cross_border.rs  kms.rs  legal_hold.rs  lib.rs  lineage.rs  rtbf.rs  tenant.rs
drc-rust/drc-infra/: Cargo.toml
drc-rust/drc-infra/src/: db.rs  ebpf.rs  lib.rs  proxy.rs  sandbox.rs
drc-rust/drc-orchestrator/: Cargo.toml
drc-rust/drc-orchestrator/src/: lib.rs
drc-rust/drc-runtime/: Cargo.toml
drc-rust/drc-runtime/src/: lib.rs
drc-rust/drc-storage/: Cargo.toml
drc-rust/drc-storage/src/: lib.rs
drc-rust/drc-system/: Cargo.toml
drc-rust/drc-system/src/: lib.rs
drc_data/: test_io.txt
drc_data/7c418db5-012a-4a52-ac22-7e97d11deb10/: events.jsonl  metadata.json
