[package]
name = "drc-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "demo.rs"

[dependencies]
drc-core = { path = "drc-rust/drc-core" }
drc-storage = { path = "drc-rust/drc-storage" }
drc-runtime = { path = "drc-rust/drc-runtime" }
drc-control = { path = "drc-rust/drc-control" }
drc-governance = { path = "drc-rust/drc-governance" }
drc-infra = { path = "drc-rust/drc-infra" }
drc-system = { path = "drc-rust/drc-system" }
drc-orchestrator = { path = "drc-rust/drc-orchestrator" }

anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
