[workspace]
members = [
    "drc-core",
    "drc-runtime",
    "drc-storage",
    "drc-control",
    "drc-governance",
    "drc-infra",
    "drc-system",
    "drc-orchestrator",
    "drc-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DRC Team"]
license = "MIT"
repository = "https://github.com/drc/drc"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.4"
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tower = "0.4"
tower-http = "0.5"
ring = "0.17"
rsa = "0.9"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dashmap = "5.5"
parking_lot = "0.12"
bytes = "1.5"
futures = "0.3"
clap = { version = "4.4", features = ["derive"] }
tokio-test = "0.4"
rand = "0.8"

# Optional dependencies for specific features
aya = { version = "0.12" }
rocksdb = { version = "0.21" }
redis = { version = "0.24" }
postgres = { version = "0.19" }
mysql_async = { version = "0.33" }
mongodb = { version = "2.8" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
