[package]
name = "drc-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "drc"
path = "src/main.rs"

[dependencies]
drc-core = { path = "../drc-core" }
drc-storage = { path = "../drc-storage" }
drc-runtime = { path = "../drc-runtime" }
drc-control = { path = "../drc-control" }
drc-governance = { path = "../drc-governance" }
drc-infra = { path = "../drc-infra" }
drc-system = { path = "../drc-system" }
drc-orchestrator = { path = "../drc-orchestrator" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
