[package]
name = "drc-control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
drc-core = { path = "../drc-core" }
drc-storage = { path = "../drc-storage" }
drc-runtime = { path = "../drc-runtime" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
