[package]
name = "drc-governance"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
drc-core = { path = "../drc-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
ring = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
parking_lot = { workspace = true }
regex = "1.10"
anyhow = { workspace = true }
uuid = { version = "1.6", features = ["v4"] }
rand = "0.8"

[dev-dependencies]
tokio-test = { workspace = true }
