[package]
name = "drc-infra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
drc-core = { path = "../drc-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
