[package]
name = "drc-orchestrator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
drc-core = { path = "../drc-core" }
drc-governance = { path = "../drc-governance" }
drc-infra = { path = "../drc-infra" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
